tests/fixtures/invalid/pow_float_list_int.py
# Cannot call pow() with Float, List[int], Int
x = pow(1.0, [1, 2, 3], 1)
